--- a/src/app/biology-section/parts/cpg2/cpg2.component.html
+++ b/src/app/biology-section/parts/cpg2/cpg2.component.html
@@ -62,7 +62,7 @@
   <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Expression vector design</h1>   </div>
   <mat-card class="sidefigure">
     <img src="http://2018.igem.org/wiki/images/3/38/T--GO_Paris-Saclay--folC_cpg2_pSB1C3.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 2: Genetic organization of the <i>folC</i>-cpg2 encoding vector
+    <div class="mat-caption captionafterapicture">Figure 2: Genetic organization of the <i>folC</i>-<i>cpg2</i> encoding vector
       (BBa_K2688009)
     </div>
   </mat-card>
@@ -275,8 +275,8 @@
     </div>
   </mat-card>
 
-  In LB + DMSO, the MTX peak was well defined. The spectrum and retention time were similar to the MTX standard. In both
-  cases, the retention time is 14.6 min (Figure 6).
+  <p>In LB + DMSO, the MTX peak was well defined. The spectrum and retention time were similar to the MTX standard. In both
+    cases, the retention time is 14.6 min (Figure 6).</p>
 
   <mat-card class="normalmargin">
     <div class="chromatographContainer">
