--- a/src/app/biology-section/parts/parts.component.html
+++ b/src/app/biology-section/parts/parts.component.html
@@ -90,7 +90,7 @@
       of downstream gene. Several variants are available, with design implications.
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="accent" (click)="this.router.navigate(['/biology/lee5'], { fragment: 'top'})">>More about these parts</button>
+      <button mat-raised-button color="accent" (click)="this.router.navigate(['/biology/lee5'], { fragment: 'top'})">More about these parts</button>
       <br><br>Registry pages: <a href="http://parts.igem.org/Part:BBa_K2688012" mat-raised-button>LEE5_GFP_native</a>
       <a href="http://parts.igem.org/Part:BBa_K2688014" mat-raised-button>LEE5_GFP_variant-1</a>
       <a href="http://parts.igem.org/Part:BBa_K2688016" mat-raised-button>LEE5_GFP_variant-1_inframe</a>
@@ -110,7 +110,7 @@
       Several variants are available, with design implications.
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="accent" (click)="this.router.navigate(['/biology/ler'], { fragment: 'top'})">>More about these parts</button>
+      <button mat-raised-button color="accent" (click)="this.router.navigate(['/biology/ler'], { fragment: 'top'})">More about these parts</button>
       <br><br>Registry pages: <a href="http://parts.igem.org/Part:BBa_K2688022" mat-raised-button>Ler1</a>
       <a href="http://parts.igem.org/Part:BBa_K2688019" mat-raised-button>Ler2</a>
       <a href="http://parts.igem.org/Part:BBa_K2688024" mat-raised-button>Ler3</a>
@@ -171,7 +171,7 @@
       corrected.
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="accent" routerLink="/biology/J23108">More about this part</button>
+      <button mat-raised-button color="accent" (click)="this.router.navigate(['/biology/J23108'], { fragment: 'top'})">More about this part</button>
       <a href="http://parts.igem.org/Part:BBa_K2688025" mat-raised-button color="accent">Registry page</a>
     </mat-card-actions>
   </mat-card>
